--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-project/local.properties
-project/bin
-project/gen
-project/lib
-project/libs
-project/assets
-project/obj
-project/src
-project/res/values*/strings.xml
-project/AndroidManifest.xml
-project/jni/Settings.mk
-project/jni/application/*/libapplication*.so
-project/jni/application/src
-project/res/drawable-xhdpi/ouya_icon.png
-project/res/drawable/app_icon.png
-project/proguard-project.txt
-project/proguard-local.cfg
-project/themes/converter
-project/jni/android-support
-project/res/drawable/banner.png
+/project/local.properties
+/project/bin
+/project/gen
+/project/lib
+/project/libs
+/project/assets
+/project/obj
+/project/src
+/project/res/values*/strings.xml
+/project/AndroidManifest.xml
+/project/jni/Settings.mk
+/project/jni/application/*/libapplication*.so
+/project/jni/application/src
+/project/res/drawable-xhdpi/ouya_icon.png
+/project/res/drawable/app_icon.png
+/project/proguard-project.txt
+/project/proguard-local.cfg
+/project/themes/converter
+/project/jni/android-support
+/project/res/drawable/banner.png
