SuperTux: bump version

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -239,7 +239,7 @@ NDK_TOOLCHAIN_VERSION=4.9
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a' # x86
+MultiABI='armeabi-v7a x86'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -250,7 +250,7 @@ CompiledLibraries="sdl_image physfs crypto ssl curl openal vorbis ogg"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -DHAVE_SDL=1 -frtti -fexceptions -std=gnu++11'
+AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -DHAVE_SDL=1 -DHAVE_OPENGL=1 -frtti -fexceptions -std=gnu++11'
 
 # Additional LDFLAGS for application
 AppLdflags='-frtti -fexceptions'
