SDL: support for AndroidPostBuild.sh script, to customize .apk file after it was generated

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -18,7 +18,7 @@ AppVersionName="0.4.0.10"
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # You can specify Google Play expansion files in the form 'obb:main.12345' or 'obb:patch.12345' where 12345 is the app version, first associated with the file
-AppDataDownloadUrl="!Data files|:data.zip:obb:main.4008|:data.zip:http://sourceforge.net/projects/libsdl-android/files/SuperTux/data-5.zip^!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
+AppDataDownloadUrl="!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
