SuperTux: added TV banner

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -250,7 +250,7 @@ CompiledLibraries="sdl_image physfs crypto ssl curl openal vorbis ogg"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -DHAVE_SDL=1 -DHAVE_OPENGL=1 -frtti -fexceptions -std=gnu++11'
+AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -std=gnu++11'
 
 # Additional LDFLAGS for application
 AppLdflags='-frtti -fexceptions'
