--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="SuperTux"
 AppFullName=org.lethargik.supertux2
 
 # Application version code (integer)
-AppVersionCode=04011
+AppVersionCode=04012
 
 # Application user-visible version name (string)
-AppVersionName="0.4.0.11"
+AppVersionName="0.4.0.12"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
+DeleteFilesOnUpgrade="data.zip"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
@@ -239,7 +239,7 @@ NDK_TOOLCHAIN_VERSION=4.9
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a x86'
+MultiABI='armeabi-v7a x86 mips'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -250,7 +250,7 @@ CompiledLibraries="sdl_image physfs crypto ssl curl openal vorbis ogg"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -std=gnu++11'
+AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -std=gnu++11 -DHAVE_SDL=1'
 
 # Additional LDFLAGS for application
 AppLdflags='-frtti -fexceptions'
