Banner for Commander Genius

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Commander Genius"
 AppFullName=net.sourceforge.clonekeenplus
 
 # Application version code (integer)
-AppVersionCode=193000
+AppVersionCode=195000
 
 # Application user-visible version name (string)
-AppVersionName="1.9.3.0 Beta"
+AppVersionName="1.9.5.0 Beta"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -220,7 +220,7 @@ AppCflags='-frtti -fexceptions -finline-functions -DOGG=1 -DANDROID=1 -DREFKEEN_
 
 # Additional LDFLAGS for application
 #AppLdflags='-ltremor'
-AppLdflags='-lvorbis -logg'
+AppLdflags='-lvorbis -logg -lcrypto -lssl -lcurl'
 
 # If application has headers with the same name as system headers, this option tries to fix compiler flags to make it compilable
 AppOverlapsSystemHeaders=
