SDL: timestamping debug builds makes no sense

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -247,7 +247,7 @@ CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
 
 # Additional LDFLAGS for application
-AppLdflags='-fuse-ld=bfd'
+AppLdflags=''
 
 # If application has headers with the same name as system headers, this option tries to fix compiler flags to make it compilable
 AppOverlapsSystemHeaders=
