SDL: request Marshmallow SD card runtime permission using SDL_ANDROID_RequestExternalStorageRuntimePermission()

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -64,7 +64,7 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 
 # Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
-InhibitSuspend=n
+InhibitSuspend=y
 
 # Create Android service, so the app is less likely to be killed while in background
 CreateService=
