--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -170,7 +170,7 @@ AppUsesMultitouch=y
 AppRecordsAudio=n
 
 # Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
-AccessSdCard=
+AccessSdCard=y
 
 # Application needs Internet access. If you disable it, you'll have to bundle all your data files inside .apk (y) / (n)
 AccessInternet=
