SDL: clang support in setEnvironment scripts, set CLANG=1 envvar for it to work, you will also need to include -latomic to your libs for ARM builds

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -64,7 +64,7 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 
 # Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
-InhibitSuspend=n
+InhibitSuspend=y
 
 # Create Android service, so the app is less likely to be killed while in background
 CreateService=
@@ -238,7 +238,7 @@ FirstStartMenuOptions=''
 AppMinimumRAM=300
 
 # GCC version, 4.6 (default) or 4.8, CLANG is not supported yet
-NDK_TOOLCHAIN_VERSION=
+NDK_TOOLCHAIN_VERSION=clang
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
