--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Pachi el marciano"
 AppFullName=net.sourceforge.dragontech.pachi
 
 # Application version code (integer)
-AppVersionCode=1071
+AppVersionCode=1078
 
 # Application user-visible version name (string)
-AppVersionName="1.07-mips"
+AppVersionName="1.07-x86"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -242,7 +242,7 @@ NDK_TOOLCHAIN_VERSION=
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='mips'
+MultiABI='armeabi-v7a'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -272,7 +272,7 @@ AppCmdline=''
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
-MinimumScreenSize=n
+MinimumScreenSize=s
 
 # Your AdMob Publisher ID, (n) if you don't want advertisements
 AdmobPublisherId=n
