--- a/project/jni/Makefile.prebuilt
+++ b/project/jni/Makefile.prebuilt
@@ -2,14 +2,14 @@
 # TODO: libboost, libffmpeg, libpython (used only in GemRB)
 
 ARCHES32 := armeabi armeabi-v7a x86 mips
-ARCHES64 := arm64-v8a x86_64
+ARCHES64 := arm64-v8a
 
 ICONV := $(foreach ARCH, $(ARCHES32), iconv/lib/$(ARCH)/libiconv.so iconv/lib/$(ARCH)/libcharset.so)
 
 ICU_LIBS := data i18n io le lx test tu uc
 ICU := $(foreach ARCH, $(ARCHES32), $(foreach NAME, $(ICU_LIBS), icuuc/lib/$(ARCH)/libicu$(NAME).a))
 
-OPENSSL := $(foreach ARCH, $(ARCHES32), openssl/lib-$(ARCH)/libcrypto.so.sdl.0.so openssl/lib-$(ARCH)/libssl.so.sdl.0.so)
+OPENSSL := $(foreach ARCH, $(ARCHES32) $(ARCHES64), openssl/lib-$(ARCH)/libcrypto.so.sdl.0.so openssl/lib-$(ARCH)/libssl.so.sdl.0.so)
 
 LIBS := $(ICONV) $(ICU) $(OPENSSL)
 
