SDL: switched NDK platform version back to Android 4.0 for OpenSSL and applikcation build scripts, because it crashes when using Android 6.0 API, bumped OpenSSL version to force recompilation

--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Pachi el marciano"
 AppFullName=net.sourceforge.dragontech.pachi
 
 # Application version code (integer)
-AppVersionCode=1078
+AppVersionCode=10792
 
 # Application user-visible version name (string)
-AppVersionName="1.07-x86"
+AppVersionName="1.07-mips64"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -237,12 +237,12 @@ FirstStartMenuOptions=''
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
 
-# GCC version, 4.6 (default) or 4.8, CLANG is not supported yet
+# GCC version, or 'clang' for CLANG
 NDK_TOOLCHAIN_VERSION=
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
-# Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a'
+# Available architectures: armeabi armeabi-v7a x86 mips arm64-v8a
+MultiABI='mips64'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
