--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="OpenArena"
 AppFullName=ws.openarena.sdl
 
 # Application version code (integer)
-AppVersionCode=08835
+AppVersionCode=08837
 
 # Application user-visible version name (string)
-AppVersionName="0.8.8.35"
+AppVersionName="0.8.8.37"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -237,12 +237,12 @@ FirstStartMenuOptions=''
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=300
 
-# GCC version, 4.6 (default) or 4.8, CLANG is not supported yet
+# GCC version, or 'clang' for CLANG
 NDK_TOOLCHAIN_VERSION=clang
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
-# Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a x86 mips'
+# Available architectures: armeabi armeabi-v7a x86 mips arm64-v8a
+MultiABI='armeabi-v7a x86 arm64-v8a'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
