--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -89,7 +89,7 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
-ShowMouseCursor=y
+ShowMouseCursor=n
 
 # Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
 GenerateSubframeTouchEvents=
@@ -180,10 +180,10 @@ MultiABI=n
 AppMinimumRAM=32
 
 # Application version code (integer)
-AppVersionCode=327800
+AppVersionCode=327801
 
 # Application user-visible version name (string)
-AppVersionName="3278.00"
+AppVersionName="3278.01"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
@@ -200,7 +200,7 @@ CompiledLibraries="sdl_mixer sdl_image sdl_ttf sdl_net png intl"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DWITH_AI=simple -DWITH_DEBUG -DWITH_EDITOR -frtti'
+AppCflags='-std=c++11 -finline-functions -O3 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DWITH_AI=simple -DWITH_EDITOR -frtti'
 
 # Additional LDFLAGS for application
 AppLdflags=''
