--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="SuperTux"
 AppFullName=org.lethargik.supertux2
 
 # Application version code (integer)
-AppVersionCode=04015
+AppVersionCode=04016
 
 # Application user-visible version name (string)
-AppVersionName="0.4.0.15"
+AppVersionName="0.4.0.16"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,7 +21,7 @@ AppVersionName="0.4.0.15"
 AppDataDownloadUrl="!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="data.zip"
@@ -141,7 +141,7 @@ AppNeedsArrowKeys=y
 FloatingScreenJoystick=n
 
 # Application needs text input (y) or (n), enables button for text input on screen
-AppNeedsTextInput=y
+AppNeedsTextInput=n
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
 # This will disable AppNeedsArrowKeys option
